--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,11 @@ body {
   box-shadow: 25px 25px 25px 0px rgba(11,15,24,1);
 }
 
+h1 {
+  height: 100px;
+  font-size: 50px;
+}
+
 ul, ol {
   list-style-type: none;
   padding-left: 0;
@@ -55,36 +60,6 @@ a {
 a:hover {
   text-decoration: underline;
   text-decoration-skip: ink;
-}
-
-
-
-/*---------------------------------------------------------------------------------
-   A11y Styles
----------------------------------------------------------------------------------*/
-
-/* Hide only visually, but have it available for screenreaders: h5bp.com/v */
-.visuallyhidden { 
-    border: 0 !important; 
-    clip: rect(0 0 0 0) !important; 
-    height: 1px !important; 
-    margin: -1px !important;
-    overflow: hidden !important;
-    padding: 0 !important;
-    position: absolute !important;
-    width: 1px !important; 
-}
-
-/* Extends the .visuallyhidden class to allow the element 
-to be focusable when navigated to via the keyboard: h5bp.com/p */ 
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto !important;
-    height: auto !important;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto !important;
 }
 
 /*---------------------------------------------------------------------------------
