--- a/src/components/feedback.css
+++ b/src/components/feedback.css
@@ -11,12 +11,13 @@
 #feedback {
 	margin: 0 auto;
   background: #cc324b;
-  padding: 1em 0.4em;
+  padding: 0.5em 0.4em;
   font-size: 1.5em;
   font-weight: 400;
   display: block;
   line-height: 1em;
   color: #fff;
+  height: 2em;
 }
 
 #feedback:target {
